[package]
name = "faina"
version = "0.1.0"
authors = ["shmutalov <shmutalov@gmail.com>"]

homepage = "https://github.com/shmutalov/gitter-rs"
repository = "https://github.com/shmutalov/gitter-rs"

description = "Faina is a Faye implementation in Rust"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["faye", "bayeux", "websockets", "gitter"]

exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "shmutalov/faina" }

[dependencies]
